1、前端图片压缩；

--- a/springboot-filesupload/src/main/resources/view/test.html
+++ b/springboot-filesupload/src/main/resources/view/test.html
@@ -79,6 +79,9 @@
 
 <!-- 引入附件管理js脚本 -->
 <script src="/attachment/js/attachment.js"></script>
+
+<!-- 图片压缩测试 -->
+<script src="/attachment/js/image-compressor.js"></script>
 <script>
     /**
      * 拓展表单对象：用于将对象序列化为JSON对象
