1、新增附件路径映射配置，映射后可通过URL直接访问附件；

--- a/springboot-filesupload/src/main/resources/view/test.html
+++ b/springboot-filesupload/src/main/resources/view/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>附件模块与业务表单整合测试</title>
     <!-- 在线引入 -->
-    <link rel="stylesheet" href="//unpkg.com/layui@2.6.8/dist/css/layui.css">
+    <link rel="stylesheet" href="/layui/css/layui.css">
 
     <!-- 引入附件管理css样式 -->
     <link rel="stylesheet" href="/attachment/css/attachment.css"/>
@@ -74,8 +74,8 @@
 </div>
 </body>
 <!-- 在线引入 -->
-<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
-<script src="//unpkg.com/layui@2.6.8/dist/layui.js"></script>
+<script src="/jquery/jquery.js"></script>
+<script src="/layui/layui.js"></script>
 
 <!-- 引入附件管理js脚本 -->
 <script src="/attachment/js/attachment.js"></script>
