1、统一异常处理代码优化；

--- a/springboot-exceptionhandler/src/main/resources/view/error.html
+++ b/springboot-exceptionhandler/src/main/resources/view/error.html
@@ -32,6 +32,7 @@
     testAjax("http://localhost:10010/test/nullPointerException");
     testAjax("http://localhost:10010/test/serviceException");
     testAjax("http://localhost:10010/test/nullPointerException111");
+    testAjax("http://localhost:10010/test/runtimeException");
 -->
 <script src="/js/jquery-1.9.1.min.js"></script>
 </html>
