--- a/springboot-websocket/src/main/resources/view/socketChart.html
+++ b/springboot-websocket/src/main/resources/view/socketChart.html
@@ -5,7 +5,8 @@
 <head>
     <title>聊天页面</title>
     <!-- jquery在线版本 -->
-    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+    <!--<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>-->
+    <script th:src="@{/js/jquery.min.js}"></script>
     <!--引入样式-->
     <link th:href="@{/css/socketChart.css}" rel="stylesheet" type="text/css"/>
 </head>
